--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,19 +47,20 @@ dependencies:
 
   dio: ^4.0.6
   get: ^4.6.5
-  camera: ^0.9.8+1
+  camera: ^0.10.3
   page_transition: ^2.0.9
   pull_to_refresh: ^2.0.0
-  device_info_plus: ^8.0.0
-  flutter_screenutil: ^5.6.0
+  device_info_plus: ^8.1.0
+  flutter_screenutil: ^5.6.1
   loading_overlay: ^0.3.0
-  package_info_plus: ^3.0.2
+  package_info_plus: ^3.0.3
   delayed_display: ^2.0.0
-  share_plus: ^6.3.0
+  share_plus: ^6.3.1
   photo_view: ^0.14.0
   sizer: ^2.0.15
   preload_page_view: ^0.1.6
-  fluttertoast: ^8.1.3
+#  fluttertoast: ^8.1.3
+  toast: ^0.3.0
   connectivity_plus: ^3.0.3
   permission_handler: ^10.2.0
   image_picker: ^0.8.6+1
@@ -67,11 +68,11 @@ dependencies:
   flutter_svg: ^2.0.0+1
   cached_network_image: ^3.2.3
   flutter_spinkit: ^5.1.0
-  flutter_launcher_icons: ^0.10.0
+  flutter_launcher_icons: ^0.11.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.5
 
 dev_dependencies:
   flutter_test:
@@ -82,7 +83,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
