--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,30 +45,30 @@ dependencies:
 #  maps_launcher: ^2.0.1
 #  google_maps_flutter: ^2.2.0
 
-  dio: ^4.0.6
-  get: ^4.6.5
-  camera: ^0.10.3
-  page_transition: ^2.0.9
-  pull_to_refresh: ^2.0.0
-  device_info_plus: ^8.1.0
-  flutter_screenutil: ^5.6.1
-  loading_overlay: ^0.3.0
-  package_info_plus: ^3.0.3
-  delayed_display: ^2.0.0
-  share_plus: ^6.3.1
-  photo_view: ^0.14.0
-  sizer: ^2.0.15
-  preload_page_view: ^0.1.6
-#  fluttertoast: ^8.1.3
-  toast: ^0.3.0
-  connectivity_plus: ^3.0.3
-  permission_handler: ^10.2.0
-  image_picker: ^0.8.6+1
-  shared_preferences: ^2.0.17
-  flutter_svg: ^2.0.0+1
-  cached_network_image: ^3.2.3
-  flutter_spinkit: ^5.1.0
-  flutter_launcher_icons: ^0.11.0
+  dio:
+  get:
+  camera:
+  page_transition:
+  pull_to_refresh:
+  device_info_plus:
+  flutter_screenutil:
+  loading_overlay:
+  package_info_plus:
+  delayed_display:
+  share_plus:
+  photo_view:
+  sizer:
+  preload_page_view:
+  fluttertoast:
+#  toast:
+  connectivity_plus:
+  permission_handler:
+  image_picker:
+  shared_preferences:
+  flutter_svg:
+  cached_network_image:
+  flutter_spinkit:
+  flutter_launcher_icons:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
