--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,10 @@ dependencies:
   local_auth: ^2.1.3
   url_launcher: ^6.1.9
   syncfusion_flutter_pdfviewer: ^20.4.50
+  flutter_barcode_scanner: ^2.0.0
+  barcode_scan2: ^4.2.1
+  flutter_beep: ^1.0.0
+
 
 dev_dependencies:
   flutter_test:
