--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,7 @@ dependencies:
   flutter_barcode_scanner: ^2.0.0
   barcode_scan2: ^4.2.1
   flutter_beep: ^1.0.0
+  lottie: ^2.2.0
 
 
 dev_dependencies:
