--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,43 +1,27 @@
 name: pharmdel
 description: A new Flutter project.
-# The following line prevents the package from being accidentally published to
-# pub.dev using `flutter pub publish`. This is preferred for private packages.
+
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number is used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-# In Windows, build-name is used as the major, minor, and patch parts
-# of the product and file versions while build-number is used as the build suffix.
 version: 1.0.0+1
 
 environment:
   sdk: '>=2.19.2 <3.0.0'
 
-# Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
     sdk: flutter
 
 #  #Firebase
-#  firebase_dynamic_links: ^4.3.11
-#  cloud_firestore: ^2.2.2
-#  flutter_local_notifications: ^12.0.3
-#  firebase_messaging: ^12.0.1
-#  firebase_auth: ^3.5.0
-#  firebase_core: ^1.20.0
+  firebase_dynamic_links: ^5.0.15
+  cloud_firestore: ^4.4.3
+  flutter_local_notifications: ^13.0.0
+  firebase_messaging: ^14.2.5
+  firebase_auth: ^4.2.9
+  firebase_core: ^2.7.0
+
+  #Local DB
+  drift: ^2.5.0
 #
 #  # Google Map
 #  geocoding: ^2.0.5
@@ -45,41 +29,41 @@ dependencies:
 #  maps_launcher: ^2.0.1
 #  google_maps_flutter: ^2.2.0
 
-  dio:
-  get:
-  camera:
-  page_transition:
-  pull_to_refresh:
-  device_info_plus:
-  flutter_screenutil:
-  loading_overlay:
-  package_info_plus:
-  delayed_display:
-  share_plus:
-  photo_view:
-  sizer:
-  preload_page_view:
-  fluttertoast:
-#  toast:
-  connectivity_plus:
-  permission_handler:
-  image_picker:
-  shared_preferences:
-  flutter_svg:
-  cached_network_image:
-  flutter_spinkit:
-  flutter_launcher_icons:
+  dio: ^5.0.0
+  get: ^4.6.5
+  camera: ^0.10.3+1
+  page_transition: ^2.0.9
+  pull_to_refresh: ^2.0.0
+  device_info_plus: ^8.1.0
+  package_info_plus: ^3.0.3
+  flutter_screenutil: ^5.6.1
+  loading_overlay: ^0.3.0
+  delayed_display: ^2.0.0
+  share_plus: ^6.3.1
+  photo_view: ^0.14.0
+  sizer: ^2.0.15
+  preload_page_view: ^0.1.6
+  fluttertoast: ^8.2.1
+
+  connectivity_plus: ^3.0.3
+  permission_handler: ^10.2.0
+  image_picker: ^0.8.6+3
+  shared_preferences: ^2.0.18
+  flutter_svg: ^2.0.2
+  cached_network_image: ^3.2.3
+  flutter_spinkit: ^5.1.0
+  flutter_launcher_icons: ^0.11.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.5
-  intl: ^0.18.0
-  logger: ^1.1.0
-  local_auth: ^2.1.3
-  url_launcher: ^6.1.9
-  syncfusion_flutter_pdfviewer: ^20.4.50
+  intl: ^0.17.0
+  logger: ^1.2.1
+  local_auth: ^2.1.5
+  url_launcher: ^6.1.10
+  syncfusion_flutter_pdfviewer: ^20.4.51
   flutter_barcode_scanner: ^2.0.0
-  barcode_scan2: ^4.2.1
+  barcode_scan2: ^4.2.3
   flutter_beep: ^1.0.0
   lottie: ^2.2.0
 
@@ -87,16 +71,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^2.0.1
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
 flutter:
@@ -111,19 +87,7 @@ flutter:
     - assets/
     - assets/images/
     - assets/logo/
-#    - assets/svg/
 
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
   fonts:
     - family: Nexa
       fonts:
@@ -145,14 +109,7 @@ flutter:
         - asset: assets/fonts/NexaThinItalic.otf
         - asset: assets/fonts/NexaXBold.otf
         - asset: assets/fonts/NexaXBoldItalic.otf
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+
 
 flutter_icons:
   android: true
