--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,10 @@ dependencies:
   barcode_scan2: ^4.2.3
   flutter_beep: ^1.0.0
   lottie: ^2.2.0
+  location_permissions: ^4.0.1
+  google_maps_flutter: ^2.2.4
+  geolocator: ^9.0.2
+  location: ^4.4.0
 
 
 dev_dependencies:
