TILL create patient and create order work start working with dashboard

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,7 +79,8 @@ dependencies:
   geolocator: ^9.0.2
   location: ^4.4.0
   flutter_polyline_points: ^1.0.0
-
+#dropdown button
+  dropdown_button2: ^2.0.0
 
 dev_dependencies:
   flutter_test:
