--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,7 @@ dependencies:
   flutter_polyline_points: ^1.0.0
 #dropdown button
   dropdown_button2: ^2.0.0
+  maps_launcher: ^2.2.0
 
 dev_dependencies:
   flutter_test:
