--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,6 +82,7 @@ dependencies:
 #dropdown button
   dropdown_button2: ^2.0.0
   maps_launcher: ^2.2.0
+  webview_flutter: ^4.0.6
 
 dev_dependencies:
   flutter_test:
