--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,6 +83,9 @@ dependencies:
   dropdown_button2: ^2.0.0
   maps_launcher: ^2.2.0
 
+  #flutter_secure_storage
+  flutter_secure_storage: ^8.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
