--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,6 +80,7 @@ dependencies:
   google_maps_flutter: ^2.2.4
   geolocator: ^9.0.2
   location: ^4.4.0
+#  location: ^5.0.0-dev.8
   flutter_polyline_points: ^1.0.0
 #dropdown button
   dropdown_button2: ^2.0.0
